--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>org.mickael</groupId>
 	<artifactId>library-ms-book</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<name>library-ms-book</name>
 	<description>Library webapp for OpenClassrooms Project 7</description>
 
@@ -24,7 +24,7 @@
 		<connection>scm:git:https://github.com/Bibliotheque-OC-P7/library-ms-book.git</connection>
 		<developerConnection>scm:git:https://github.com/Bibliotheque-OC-P7/library-ms-book.git</developerConnection>
 		<url>https://github.com/Bibliotheque-OC-P7/library-ms-book</url>
-		<tag>1.0.0</tag>
+		<tag>@{project.version}</tag>
 	</scm>
 
 	<dependencies>
